--- a/package.json
+++ b/package.json
@@ -19,24 +19,18 @@
   },
   "homepage": "https://github.com/ThuvanDao/Django_React_API#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "install-peers": "^1.0.3",
-    "webpack": "^4.38.0",
-    "webpack-bundle-tracker": "^0.4.2-beta",
-    "webpack-cli": "^3.3.6"
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-standard": "^4.0.0",
+    "webpack": "^3.10.0",
+    "webpack-bundle-tracker": "^0.2.1"
   },
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
-  },
-  "devDependencies": {
-    "webpack": "^3.10.0",
-    "webpack-bundle-tracker": "^0.2.1"
   }
 }
